Prepare for Java 19 and GraalVM 22.3